# Etude

./: pyproject.toml
configs/: default.yaml
etude/: __init__.py
etude/cli/: __init__.py  evaluate.py  infer.py  prepare.py  train.py
etude/config/: loader.py  schema.py
etude/configs/: __init__.py  default.yaml
etude/evaluation/: __init__.py
etude/evaluation/metrics/: __init__.py
etude/models/: __init__.py
etude/scripts/: __init__.py  run_separation.py
etude/utils/: __init__.py  logger.py
